# vectorsmith

./: README.md  pyproject.toml
src/vectorsmith/: __init__.py  __main__.py  app.py  compare.py  exports.py  loader.py  marker.py  mixed_mode.py  plot_kinds.py  plots.py  resources.py  rf_trace.py  session.py  workspace.py
src/vectorsmith/ui/: file_dock.py  graph_settings_dialog.py  main_window.py  marker_dock.py  metadata_dock.py  plot_toolbar.py  port_pairing_dialog.py  tdr_settings_dialog.py  theme.py
src/vectorsmith/widgets/: mpl_canvas.py
tests/: test_compare.py  test_loader.py  test_marker.py  test_mixed_mode.py  test_plot_limits.py  test_plot_toolbar.py  test_rf_trace.py  test_workspace_exports.py
tests/fixtures/: oneport.s1p  twoport.s2p
